fix inotify constructor